kubernetes/apps/kube-system/cilium/gateway/internalclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-internal
spec:
  controllerName: io.cilium/gateway-controller
  description: The gateway class for the internal gateway
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-internal-gateway-config
    namespace: kube-system
