kubernetes/apps/kube-system/cilium/gateway/external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.marcocondrache.com
spec:
  gatewayClassName: cilium-external
  addresses:
    - type: IPAddress
      value: 192.168.0.61
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.marcocondrache.com"
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.marcocondrache.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: hive-marcocondrache-com-tls
