kubernetes/apps/kube-system/cilium/gateway/internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.hive.marcocondrache.com
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname

      # TODO: This is higly redundant since internal must be exposed from tailscale
      load-balancer.hetzner.cloud/name: "internal"
      load-balancer.hetzner.cloud/disable-public-network: "true"
      load-balancer.hetzner.cloud/disable-private-ingress: "false"
      load-balancer.hetzner.cloud/use-private-ip: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.h.marcocondrache.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.h.marcocondrache.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: hive-marcocondrache-com-tls
